tools/vcf-loader/zz_vcf-grammar.output
Grammar

    0 $accept: vcfFile vcfENDOFTEXT

    1 vcfFile: fileFormatLine metaLinesOpt headerLine dataLines vcfENDOFTEXT
    2        | error
    3        | %empty

    4 fileFormatLine: vcfMETAKEY_FORMAT '=' vcfMETAVALUE vcfENDLINE

    5 metaLinesOpt: metaLines
    6             | %empty

    7 metaLines: metaLine
    8          | metaLines metaLine

    9 metaLine: vcfMETAKEY '=' vcfMETAVALUE vcfENDLINE

   10 $@1: %empty

   11 metaLine: vcfMETAKEY '=' '<' $@1 keyValuePairs '>' vcfENDLINE

   12 keyValuePairs: keyValue
   13              | keyValuePairs ',' keyValue

   14 keyValue: vcfMETAKEY '=' vcfMETAVALUE

   15 headerLine: headerItems vcfENDLINE

   16 headerItems: vcfHEADERITEM
   17            | headerItems vcfHEADERITEM

   18 dataLines: dataLine
   19          | dataLines dataLine

   20 dataLine: dataItems vcfENDLINE

   21 dataItems: vcfDATAITEM
   22          | dataItems vcfDATAITEM


Terminals, with rules where they appear

    vcfENDOFTEXT (0) 0 1
    ',' (44) 13
    '<' (60) 11
    '=' (61) 4 9 11 14
    '>' (62) 11
    error (256) 2
    vcfMETAKEY_FORMAT (258) 4
    vcfMETAKEY (259) 9 11 14
    vcfMETAVALUE (260) 4 9 14
    vcfHEADERITEM (261) 16 17
    vcfDATAITEM (262) 21 22
    vcfENDLINE (263) 4 9 11 15 20


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    vcfFile (14)
        on left: 1 2 3
        on right: 0
    fileFormatLine (15)
        on left: 4
        on right: 1
    metaLinesOpt (16)
        on left: 5 6
        on right: 1
    metaLines (17)
        on left: 7 8
        on right: 5 8
    metaLine (18)
        on left: 9 11
        on right: 7 8
    $@1 (19)
        on left: 10
        on right: 11
    keyValuePairs (20)
        on left: 12 13
        on right: 11 13
    keyValue (21)
        on left: 14
        on right: 12 13
    headerLine (22)
        on left: 15
        on right: 1
    headerItems (23)
        on left: 16 17
        on right: 15 17
    dataLines (24)
        on left: 18 19
        on right: 1 19
    dataLine (25)
        on left: 20
        on right: 18 19
    dataItems (26)
        on left: 21 22
        on right: 20 22


State 0

    0 $accept: . vcfFile vcfENDOFTEXT

    error              shift, and go to state 1
    vcfMETAKEY_FORMAT  shift, and go to state 2

    vcfENDOFTEXT  reduce using rule 3 (vcfFile)

    vcfFile         go to state 3
    fileFormatLine  go to state 4


State 1

    2 vcfFile: error .

    $default  reduce using rule 2 (vcfFile)


State 2

    4 fileFormatLine: vcfMETAKEY_FORMAT . '=' vcfMETAVALUE vcfENDLINE

    '='  shift, and go to state 5


State 3

    0 $accept: vcfFile . vcfENDOFTEXT

    vcfENDOFTEXT  shift, and go to state 6


State 4

    1 vcfFile: fileFormatLine . metaLinesOpt headerLine dataLines vcfENDOFTEXT

    vcfMETAKEY  shift, and go to state 7

    $default  reduce using rule 6 (metaLinesOpt)

    metaLinesOpt  go to state 8
    metaLines     go to state 9
    metaLine      go to state 10


State 5

    4 fileFormatLine: vcfMETAKEY_FORMAT '=' . vcfMETAVALUE vcfENDLINE

    vcfMETAVALUE  shift, and go to state 11


State 6

    0 $accept: vcfFile vcfENDOFTEXT .

    $default  accept


State 7

    9 metaLine: vcfMETAKEY . '=' vcfMETAVALUE vcfENDLINE
   11         | vcfMETAKEY . '=' '<' $@1 keyValuePairs '>' vcfENDLINE

    '='  shift, and go to state 12


State 8

    1 vcfFile: fileFormatLine metaLinesOpt . headerLine dataLines vcfENDOFTEXT

    vcfHEADERITEM  shift, and go to state 13

    headerLine   go to state 14
    headerItems  go to state 15


State 9

    5 metaLinesOpt: metaLines .
    8 metaLines: metaLines . metaLine

    vcfMETAKEY  shift, and go to state 7

    $default  reduce using rule 5 (metaLinesOpt)

    metaLine  go to state 16


State 10

    7 metaLines: metaLine .

    $default  reduce using rule 7 (metaLines)


State 11

    4 fileFormatLine: vcfMETAKEY_FORMAT '=' vcfMETAVALUE . vcfENDLINE

    vcfENDLINE  shift, and go to state 17


State 12

    9 metaLine: vcfMETAKEY '=' . vcfMETAVALUE vcfENDLINE
   11         | vcfMETAKEY '=' . '<' $@1 keyValuePairs '>' vcfENDLINE

    vcfMETAVALUE  shift, and go to state 18
    '<'           shift, and go to state 19


State 13

   16 headerItems: vcfHEADERITEM .

    $default  reduce using rule 16 (headerItems)


State 14

    1 vcfFile: fileFormatLine metaLinesOpt headerLine . dataLines vcfENDOFTEXT

    vcfDATAITEM  shift, and go to state 20

    dataLines  go to state 21
    dataLine   go to state 22
    dataItems  go to state 23


State 15

   15 headerLine: headerItems . vcfENDLINE
   17 headerItems: headerItems . vcfHEADERITEM

    vcfHEADERITEM  shift, and go to state 24
    vcfENDLINE     shift, and go to state 25


State 16

    8 metaLines: metaLines metaLine .

    $default  reduce using rule 8 (metaLines)


State 17

    4 fileFormatLine: vcfMETAKEY_FORMAT '=' vcfMETAVALUE vcfENDLINE .

    $default  reduce using rule 4 (fileFormatLine)


State 18

    9 metaLine: vcfMETAKEY '=' vcfMETAVALUE . vcfENDLINE

    vcfENDLINE  shift, and go to state 26


State 19

   11 metaLine: vcfMETAKEY '=' '<' . $@1 keyValuePairs '>' vcfENDLINE

    $default  reduce using rule 10 ($@1)

    $@1  go to state 27


State 20

   21 dataItems: vcfDATAITEM .

    $default  reduce using rule 21 (dataItems)


State 21

    1 vcfFile: fileFormatLine metaLinesOpt headerLine dataLines . vcfENDOFTEXT
   19 dataLines: dataLines . dataLine

    vcfENDOFTEXT  shift, and go to state 28
    vcfDATAITEM   shift, and go to state 20

    dataLine   go to state 29
    dataItems  go to state 23


State 22

   18 dataLines: dataLine .

    $default  reduce using rule 18 (dataLines)


State 23

   20 dataLine: dataItems . vcfENDLINE
   22 dataItems: dataItems . vcfDATAITEM

    vcfDATAITEM  shift, and go to state 30
    vcfENDLINE   shift, and go to state 31


State 24

   17 headerItems: headerItems vcfHEADERITEM .

    $default  reduce using rule 17 (headerItems)


State 25

   15 headerLine: headerItems vcfENDLINE .

    $default  reduce using rule 15 (headerLine)


State 26

    9 metaLine: vcfMETAKEY '=' vcfMETAVALUE vcfENDLINE .

    $default  reduce using rule 9 (metaLine)


State 27

   11 metaLine: vcfMETAKEY '=' '<' $@1 . keyValuePairs '>' vcfENDLINE

    vcfMETAKEY  shift, and go to state 32

    keyValuePairs  go to state 33
    keyValue       go to state 34


State 28

    1 vcfFile: fileFormatLine metaLinesOpt headerLine dataLines vcfENDOFTEXT .

    $default  reduce using rule 1 (vcfFile)


State 29

   19 dataLines: dataLines dataLine .

    $default  reduce using rule 19 (dataLines)


State 30

   22 dataItems: dataItems vcfDATAITEM .

    $default  reduce using rule 22 (dataItems)


State 31

   20 dataLine: dataItems vcfENDLINE .

    $default  reduce using rule 20 (dataLine)


State 32

   14 keyValue: vcfMETAKEY . '=' vcfMETAVALUE

    '='  shift, and go to state 35


State 33

   11 metaLine: vcfMETAKEY '=' '<' $@1 keyValuePairs . '>' vcfENDLINE
   13 keyValuePairs: keyValuePairs . ',' keyValue

    '>'  shift, and go to state 36
    ','  shift, and go to state 37


State 34

   12 keyValuePairs: keyValue .

    $default  reduce using rule 12 (keyValuePairs)


State 35

   14 keyValue: vcfMETAKEY '=' . vcfMETAVALUE

    vcfMETAVALUE  shift, and go to state 38


State 36

   11 metaLine: vcfMETAKEY '=' '<' $@1 keyValuePairs '>' . vcfENDLINE

    vcfENDLINE  shift, and go to state 39


State 37

   13 keyValuePairs: keyValuePairs ',' . keyValue

    vcfMETAKEY  shift, and go to state 32

    keyValue  go to state 40


State 38

   14 keyValue: vcfMETAKEY '=' vcfMETAVALUE .

    $default  reduce using rule 14 (keyValue)


State 39

   11 metaLine: vcfMETAKEY '=' '<' $@1 keyValuePairs '>' vcfENDLINE .

    $default  reduce using rule 11 (metaLine)


State 40

   13 keyValuePairs: keyValuePairs ',' keyValue .

    $default  reduce using rule 13 (keyValuePairs)
